# agents-ui

./: .agents-ui.toml  CLAUDE.md  Cargo.toml  README.md  SPEC.md  test-coverage.md
.claude/: settings.json
.factory/commands/: approve-proposal.md  assess.md  autocoder-help.md  brainstorm-issue.md  fix-loop.md  fix.md  full-regression-test.md  improve-test-coverage.md  install.md  list-needs-design.md  list-needs-feedback.md  list-proposals.md  modernize-help.md  modernize.md  monitor-loop.md  monitor-workers.md  plan.md  retro-apply.md  retro.md  review-blocked.md  stop-loop.md
.factory/droids/: architect.md  coder.md  documentation.md  migration-coordinator.md  security.md  tester.md
.factory/skills/: autocoder  modernize
.github/: .priority-labels-configured
docs/adr/: 0001-runtime-adapter-integration.md
scripts/: droid-autocoder.sh  droid-fix-loop.sh  droid-manage-workers-loop.sh  droid-manage-workers.sh  droid-monitor-loop.sh  droid-monitor-workers.sh  droid-stop-loop.sh
src/: app.rs  event.rs  github.rs  main.rs  transport.rs  tui.rs
src/adapter/: claude.rs  mod.rs  traits.rs
src/config/: keybindings.rs  mod.rs  persistence.rs  shortcuts.rs
src/model/: issue.rs  mod.rs  status.rs  swarm.rs
src/scripts/: launcher.rs
src/tmux/: mod.rs  proxy.rs  session.rs
src/ui/: agent_view.rs  feedback_dialog.rs  help_overlay.rs  issue_detail.rs  issue_list.rs  issue_view.rs  mod.rs  new_swarm.rs  repo_view.rs  repos_list.rs  shortcuts_viewer.rs  swarm_view.rs  text_input.rs  theme.rs
