[package]
name = "agents-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "agents-tui"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# File watching
notify = "7"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Directories
dirs = "6"

# ANSI to ratatui conversion
ansi-to-tui = "7"
